--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-custom-tooltip",
-  "version": "1.0.2",
-  "description": "a small customised react date picker library",
+  "version": "1.0.3",
+  "description": "A small react library for creating a customised Tooltip",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rajeshkumaran/react-datepicker.git"
+    "url": "git+https://github.com/rajeshkumaran/react-custom-tooltip.git"
   },
   "main": "index.js",
   "keywords": [
@@ -40,7 +40,6 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-emotion": "^9.2.6",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1"
